--- a/annexe/IESM.tex
+++ b/annexe/IESM.tex
@@ -845,8 +845,9 @@ algorithm~\ref{algo1}. Maintenance operations are randomly set in such
 a way that, on each machine, the end of the operation occurs before
 the deadline, i.e. the end of the planning horizon $T$.
 
-\begin{algorithm}[english][!htb]
+\begin{algorithm}[english]
   \caption{Simple heuristic for finding a simple solution}
+\label{algo1}
   $machLoad_k=0,\ \forall k \in {\cal M}$ 
   
   $aff_j=-1,\ \forall j \in {\cal J} $
@@ -948,7 +949,6 @@ develop column generation procedures.
 This work was funded by ECOS--CONICYT French-Chile cooperation program
 C13E04.
 
-\newpage
 \section*{Bibliography}
 \sectionmark{Bibliography}
 \begin{bibunit}[alpha]
