--- a/main_file.tex
+++ b/main_file.tex
@@ -68,15 +68,15 @@
 %
 \clearemptydoublepage%
 %\listofalgorithms
-%\input{intro.tex}
+\input{intro.tex}
 %
 \clearemptydoublepage%
-%\input{part1/chap1.tex}%
+\input{part1/chap1.tex}%
 \clearemptydoublepage%
-%\input{part2/PPC.tex}
+\input{part2/PPC.tex}
 %
 \clearemptydoublepage%
-%\input{part3/PLNE.tex}
+\input{part3/PLNE.tex}
 %
 \clearemptydoublepage%
 \input{part4/expe.tex}
@@ -93,5 +93,5 @@
 %
 \clearemptydoublepage%
 \appendix
-%\input{annexe/Annexe.tex}
+\input{annexe/Annexe.tex}
 \end{document}
