--- a/part3/CECSP/amelioration_modele.tex
+++ b/part3/CECSP/amelioration_modele.tex
@@ -181,7 +181,7 @@ qui sont décrites dans la section suivante.
 
 
 \subsection{Amélioration des modèles à événements}
-
+\label{sec:amelioration_OO}
 Dans ce paragraphe, nous présentons les améliorations possibles des
 modèles à événements. Dans un premier temps, nous montrons que le
 modèle start/end possède de meilleures relaxations que le modèle
