--- a/part4/instances.tex
+++ b/part4/instances.tex
@@ -61,7 +61,7 @@ pour évaluer les performances des améliorations des modèles du
   
 \subsection{Instances et pré-calcul des fenêtres de temps pour le
   \RCPSP}
-
+\label{sec:instances_RCPSP}
 \subsubsection{Génération des instances}
 Les instances utilisées sont les instances définies par
 Kone~\cite{theseOumar} pour évaluer la performances des modèles à
