--- a/annexe/IESM.tex
+++ b/annexe/IESM.tex
@@ -279,7 +279,7 @@ during peak hours.
 %\node at (4,0.4) {$J_2$};
 \end{scope}
  \end{tikzpicture}  
-\caption{Optimal solution of a simple instance}
+\caption{Optimal solution of a simple instance.}
 \label{fig_smallex}
 \end{figure}
 
@@ -398,7 +398,7 @@ within the peak hour (interval marked with a P).
 %\node at (4,0.4) {$J_2$};
 \end{scope}
  \end{tikzpicture}  
-\caption{Two batches of a job on the same machine}
+\caption{Two batches of a job on the same machine.}
 \label{fig_contrex-1batch}
 \end{figure}
 
@@ -784,7 +784,7 @@ scheduled on this machine.
       \hline
     \end{tabular}
     \vspace{0.1cm}
-    \caption{setup times between batches}
+    \caption{Setup times between batches.}
     \label{table1}
   \end{center}
 \end{table}
@@ -799,7 +799,7 @@ scheduled on this machine.
       5.4\\ 9 & 0 & 0 & 8.5\\ 10 & 0 & 0 & 8.1\\ \hline
     \end{tabular}
     \vspace{0.1cm}
-    \caption{machine speeds for each lot}
+    \caption{Machine speeds for each lot.}
     \label{table2}
   \end{center}
 \end{table}
@@ -826,7 +826,7 @@ peak hours to these values in our instances.
     4	&	16743,19	&	27,41	&	56,8	&	29,22	&	30	&	26,85	&	16750,71	&	97,18	\\
     \hline
   \end{tabular}
-  \caption{Results of experiments for (MILP2+MILP3)}
+  \caption{Results of experiments for (MILP2+MILP3).}
   \label{table4}
 \end{table*}
 
@@ -846,7 +846,7 @@ a way that, on each machine, the end of the operation occurs before
 the deadline, i.e. the end of the planning horizon $T$.
 
 \begin{algorithm}[english]
-  \caption{Simple heuristic for finding a simple solution}
+  \caption{Simple heuristic for finding a simple solution.}
 \label{algo1}
   $machLoad_k=0,\ \forall k \in {\cal M}$ 
   
@@ -1054,7 +1054,7 @@ C13E04.
 \centering
 ~
 
-  \caption{Detailed results of experiments for (MILP2+MILP3)}
+  \caption{Detailed results of experiments for (MILP2+MILP3).}
   \label{table3}
 \end{table}
 
