--- a/main_file.tex
+++ b/main_file.tex
@@ -82,6 +82,9 @@
 \input{part4/expe.tex}
 %
 \clearemptydoublepage%
+\input{conclu.tex}
+%
+\clearemptydoublepage%
 \bibliographystyle{alpha}
 \bibliography{main_file,JFPC,IESM}
 
