--- a/part1/conclusion.tex
+++ b/part1/conclusion.tex
@@ -1,5 +1,5 @@
 
-\chapter*{Conclusion}
+\chapter*{Conclusion\markboth{CONCLUSION}{}}
 
 Dans cette partie, nous avons introduit les principales
 caractéristiques des problèmes d'ordonnancement avant de nous
