--- a/part1/ordo.tex
+++ b/part1/ordo.tex
@@ -1,7 +1,7 @@
 \section{Ordonnancement et contraintes de ressources}
 \label{sec:ordo}
 \subsection{L'ordonnancement}
-
+\label{sec:ordo_def}
 La théorie de l'ordonnancement s'intéresse au calcul de dates
 d'exécution d'un ensemble d'activités. Dans cette optique,
 l'utilisation d'une ou plusieurs ressources peut être nécessaire et
