--- a/part3/conclusion.tex
+++ b/part3/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter*{Conclusion}
+\chapter*{Conclusion\markboth{CONCLUSION}{}}
 
 Cette partie consacrée à la programmation linéaire mixte et en nombres
 entiers a commencé par décrire les concepts fondamentaux de cette
