--- a/part4/instances.tex
+++ b/part4/instances.tex
@@ -1,6 +1,6 @@
 %TODO : fonction LPM et résultats time index RCPSP avc RE?
 \section{Génération des instances et pré-traitement}
-
+\label{sec:instance}
 Ce paragraphe présente, dans un premier temps, la méthode utilisée
 pour générer des ensembles d'instances de test pour le \CECSP. Nous
 détaillons ensuite les jeux d'instances du \RCPSP sur lesquelles nous
