--- a/part4/res_PPC.tex
+++ b/part4/res_PPC.tex
@@ -1,5 +1,5 @@
 \section{Performances de la Programmation Par Contraintes}
-
+\label{sec:expe_PPC}
 Dans ce paragraphe, nous présentons les résultats des experimentations
 portant sur les méthodes présentées dans le
 chapitre~\ref{sec:PPC_CECSP}. Dans un premier temps, nous définissons
@@ -221,7 +221,7 @@ pour valeur de $\epsilon$ $??$. Les colonnes du tableau correspondent
 
 \begin{table}[!htb]
   \begin{center}
-    \begin{tabular}{|c|cccccccc|}
+    \begin{tabular}{|c|M{1.8cm}M{1.8cm}M{1.8cm}ccccc|}
       \hline
       \#act. &  \multicolumn{8}{c|}{Méthode de branchement hybride}\\ 
              &  \multicolumn{8}{c|}{$\epsilon=5$} \\ 
