--- a/intro.tex
+++ b/intro.tex
@@ -1,12 +1,13 @@
 \chapter*{Introduction\markboth{INTRODUCTION}{}}
 
 De nos jours, de nombreuses tâches, auparavant fastidieuses, ont vu
-leur complexité largement diminuée grâce à la mise en place d'outils
+leur complexité largement diminuer grâce à la mise en place d'outils
 informatiques permettant leur traitement. Ces outils sont constamment
 améliorés et l'augmentation des performances des ordinateurs les
 rendent de plus en plus efficaces. Cependant, nombre de ces outils
-reposent sur des problèmes complexes dont la résolution demande un
-grand nombre d'opérations. Le plus souvent, ce nombre d'opérations est
+reposent sur la résolution de problèmes complexes demandant un
+grand nombre d'opérations. Dans le cas où la variante décisionnelle du
+problème est NP-complète, ce nombre d'opérations est
 exponentiel en fonction de la taille du problème. Dans ce cas, la
 résolution de tels problèmes peut prendre plusieurs centaines
 d'années. 
@@ -15,7 +16,7 @@ La mise en place de techniques dédiées permettant de prendre en
 considération les propriétés intrinsèques du problème est donc un
 axe de recherche majeur dans le domaine de l'informatique. Parmi les
 classes de problèmes les plus étudiés, on retrouve les problèmes
-d'ordonnancement, les problèmes de tournée de véhicules ou les
+d'ordonnancement, les problèmes de tournées de véhicules ou les
 problèmes d'affectation. 
 
 Dans cette thèse, nous nous sommes intéressé aux problèmes
@@ -23,7 +24,7 @@ d'ordonnancement et, plus particulièrement, aux problèmes
 d'ordonnancement avec contraintes de ressource. Parmi les problèmes
 les plus étudiés dans la littérature, nous retrouvons le problème
 d'ordonnancement de projet avec contraintes de ressource et le problème
-cumulatif. 
+cumulatif.
 
 Dans le problème d'ordonnancement de projet avec contraintes de
 ressource, nous devons ordonnancer un ensemble d'activités, chacune
@@ -38,7 +39,9 @@ Dans le problème cumulatif, les activités consomment une quantité
 d'une et une seule ressource. Il s'agit de la même ressource pour
 toutes les activités. Dans ce problème, il n'y a pas de relation de
 précédence entre les activités mais chaque activité dispose d'une
-fenêtre de temps dans laquelle elle doit s'exécuter. 
+fenêtre de temps dans laquelle elle doit s'exécuter. Ce problème
+correspond à une relaxation de la variante décisionnelle du problème d'ordonnancement de projet avec contraintes de
+ressource.
 
 La plus grande limites de ces problème est que les activités sont
 supposées de durée fixes et consommant une quantité de ressource
@@ -50,77 +53,128 @@ possibilité, pour une activité, de consommer plus de ressource
 n'est pas modélisée dans ces problèmes. Les activités satisfaisant
 cette propriété sont dites {\it malléables} dans le sens où leur
 forme, définie par leur durée et consommation de ressource pendant
-leur exécution, doit être décidée pendant le processus de résolution. 
+leur exécution, doit être décidée pendant le processus de
+résolution. Des exemples de tels activités sont variés lorsque les
+activités doivent consommer une ressource de type, par
+exemple, énergétiques comme l'électricité où la quantité de ressource
+allouée à une activité peut être modulée à tout instant pour accélérer
+ou diminuer leur consommation (souvent pour réduire les coûts
+énergétiques). Un autre exemple intervient dans l'ordonnancement de
+projet où la durée d'une activités dépend de la quantité de ressource
+qui lui est attribuée (p.e. personnel). 
 
 Cette thèse étudie une nouvelle modélisation des activités malléables
 représentée par un problème appelé le problème d'ordonnancement
 continu avec contraintes énergétiques. Dans ce problème, un ensemble
 d'activités,  utilisant une ressource continue et cumulative de
 capacité limitée, doit être ordonnancé. La quantité de ressource
-nécessaire à l'exécution d'une tâche n'est pas fixée mais doit
-être déterminé. Une fois la tâche commencée et jusqu'à sa date de fin,
-la quantité de ressource consommée par l'activité doit être comprise
-entre une valeur maximale et une valeur minimale. De plus, la
-consommation, à un instant donnée,  d'une partie de la ressource
-permet à l'activité de recevoir une certaine quantité d'énergie,
-calculée par le biais d'une fonction de rendement. Cette énergie nous
-permet de savoir quand l'activité est terminée, i.e. quand elle a
-reçue une quantité suffisante d'énergie. 
+nécessaire à l'exécution d'une activité n'est pas fixée mais doit
+être déterminée à chaque instant. Une fois la tâche commencée et
+jusqu'à sa date de fin, la quantité de ressource consommée par
+l'activité doit être comprise entre une valeur maximale et une valeur
+minimale. De telles bornes dans des problèmes pratiques
+peuvent représentées, par exemple, la quantité d'énergie
+minimale requise pour qu'une réaction chimique ou thermodynamique
+puisse se faire dans les conditions prescrites ou le nombre minimum et
+maximum d'employés pouvant être affectés à une activité.
+De plus, la consommation, à un instant donné, d'une partie
+de la ressource permet à l'activité de recevoir une certaine quantité
+d'énergie, calculée par le biais d'une fonction de rendement. Ces
+fonctions de rendement peuvent, par exemple, représentées les pertes
+dues à la conversion de la ressource en énergie (p.e. AC/DC) ou les
+coûts de communication dans des architectures multiprocesseurs. 
+L'énergie reçue par une activité nous permet de savoir quand
+l'activité est terminée, i.e. quand elle a reçue une quantité
+suffisante d'énergie.  
 
 Pour le problème cumulatif et le problème d'ordonnancement de projet
 avec contraintes de ressource, différentes techniques permettant de
-trouver des solutions ont été mises en place. Ces techniques utilisent
-des concepts et théorie pouvant être très variés. Cependant, deux de
-ceux figurant parmi les plus utilisées demeurent les techniques issues
+trouver des solutions ont été mises en place dans la littérature. Ces techniques utilisent
+des concepts et théories pouvant être très variés. Cependant, deux de
+celles figurant parmi les plus utilisées demeurent les techniques issues
 de la programmation par contraintes et de la programmation linéaire
 mixte (ou en nombres entiers). En effet, ces techniques se sont
 révélées très efficace dans le processus de résolution de ces deux
 problèmes. Ce sont quelques unes de ces méthodes que nous nous
-proposons d'appliquer dans cette thèse.
+proposons d'étendre au problème considéré dans cette thèse.
 
 Le plan de la thèse est le suivant: 
 \begin{itemize}
 \item le chapitre~\ref{sec:chapter1} commence par détailler les
 principales caractéristiques des problèmes d'ordonnancement
-(paragraphe~\ref{sec:ordo}). Ensuite, une définition formelle des
-problèmes d'ordonnancement cumulatifs et d'ordonnancement de projet
-avec contrainte de ressource ainsi qu'une description des principales
-limitations de ces problèmes sont données
+(paragraphe~\ref{sec:ordo_def}). Ensuite, une définition formelle des
+problèmes d'ordonnancement cumulatif et de projet
+avec contraintes de ressource ainsi qu'une description des principales
+limitations de ces problèmes en termes de modélisation de certaines
+ressources sont données
 (paragraphe~\ref{sec:ordo_res}).  Enfin, le
 paragraphe~\ref{sec:ordo_nrj} décrit le problème étudié dans ce
 manuscrit: le problème d'ordonnancement continu avec contraintes
-énergétiques. De plus, ce paragraphe d'écrit les modélisations
-pré-existantes des activités malléables tout en expliquant en quoi ces
-modélisations ne suffisaient pas à la modélisation de tous les problèmes
+énergétiques. De plus, ce paragraphe décrit les modélisations
+préexistantes des activités malléables tout en expliquant en quoi ces
+modélisations ne suffisaient pas à la modélisation de certains problèmes
 réels. La dernière chose abordée dans ce chapitre est la présentation
-d'un certains nombres de propriétés satisfaites par ce problème.
+d'un certain nombre de propriétés remarquables satisfaites par ce problème.
 \item les chapitres~\ref{sec:PPC_CUSP} et~\ref{sec:PPC_CECSP} sont
-  dédiés aux méthodes issues de la programmation par
+  dédiés aux méthodes de programmation par
   contraintes. Après une brève introduction à la programmation par
   contraintes (paragraphe~\ref{sec:PPC}) et à l'ordonnancement en
   programmation par contraintes (paragraphe~\ref{sec:cumu_ordo}), nous
-  présentons les principaux algorithmes de filtrages mis en place pour
-  le problème cumulatif (paragraphe~\ref{sec:cumu_propag}). Une partie
-  de ces algorithmes est ensuite adapté au cas du problème
-  d'ordonnancement continu avec contraintes énergétiques dans le
-  chapitre~\ref{sec:PPC_CECSP}. 
+  présentons les principaux algorithmes de filtrage mis en place pour
+  le problème cumulatif (paragraphe~\ref{sec:cumu_propag}). Dans le
+  chapitre~\ref{sec:PPC_CECSP}, nous adaptons une partie de ces
+  algorithmes au problème d'ordonnancement continu avec contraintes
+  énergétiques. Dans un premier temps, nous montrons qu'une partie de
+  ces algorithmes peuvent facilement être adaptés en considérant
+  l'ordonnancement des activités dans le pire des cas en termes de
+  durée ou de consommation de ressource (voir
+  paragraphe~\ref{sec:TT_CECSP}). Le paragraphe~\ref{sec:ER_CECSP} est
+  consacré à l'adaptation du raisonnement énergétique. Pour ce
+  raisonnement, nous présentons plusieurs méthodes permettant de
+  caractériser les intervalles sur lesquels appliquer ce raisonnement.
 \item les chapitres~\ref{sec:PLNE_RCPSP} et~\ref{sec:PLNE_CECSP}
   présentent les techniques de résolution issues de la programmation
   linéaire mixte. Dans un premier temps, nous décrivons les concepts généraux
   de la programmation linéaire mixte (paragraphe~\ref{sec:PLNE}). Nous
-  présentons ensuite un certain nombre de modèles mis en place pour
+  présentons ensuite trois modèles mis en place pour
   résoudre le problème d'ordonnancement de projet avec contraintes de
-  ressource (paragraphe~\ref{sec:PLNE_ordo_res}). Ces modèles sont
+  ressource (paragraphe~\ref{sec:PLNE_ordo_res}). Le premier est un
+  modèle indexé par le temps et les deux autres utilisent des
+  formulations basées sur les événements. Ces modèles sont
   ensuite adaptés dans le cadre du problème d'ordonnancement continu
-avec contraintes énergétiques (paragraphe~\ref{sec:modele_CECSP}). De
-plus, des résultats venant renforcer ces modèles sont présentés dans
-le paragraphe~\ref{sec:amelioration_modele}.
+avec contraintes énergétiques (paragraphe~\ref{sec:modele_CECSP}). Le
+paragraphe~\ref{sec:amelioration_modele} présente quant à lui plusieurs
+ensembles d'inégalités permettant de renforcer les modèles
+présentés. Pour le modèle indexé par le temps, des inégalités
+directement déduites du raisonnement énergétiques sont exhibées. Pour
+les modèles à événements, cinq jeux d'inégalités sont présentés et
+l'un d'entre eux est utilisée pour donner une description minimale de
+l'enveloppe convexe du polyèdre formé par toutes les affectations
+possibles des variables binaires correspondant à une seule activité.
 \item le chapitre~\ref{sec:expe} présente les résultats expérimentaux
   conduits pour valider les notions théoriques décrites dans les
-  chapitres précédents. 
+  chapitres précédents. Dans un premier temps, nous présentons les
+  instances sur lesquelles les algorithmes ont été appliqués (voir
+  paragraphe~\ref{sec:instance}). Le paragraphe~\ref{sec:expe_PLNE}
+  présente les performances des différents modèle de programmation
+  linéaire mixte définis pour le \CECSP. De plus, l'influence des 
+  inégalités définies pour renforcer les modèles est évaluée. Le
+  paragraphe suivant (~\ref{sec:expe_PPC}) présente les résultats obtenus
+  lors des expérimentations portant sur la programmation par
+  contraintes. Les raisonnements présentés dans le manuscrit sont
+  intégrés dans une méthode de branchement hybride utilisant un modèle
+  de programmation linéaire.  
 \item les annexes~\ref{ann:JFPC} et~\ref{ann:IESM} présentent des
   travaux réalisés pendant la thèse mais pas assez aboutis ou trop
-  éloignés du sujet de ce manuscrit pour y figurer à part entière. 
+  éloignés du sujet de ce manuscrit pour y figurer à part entière.
+  L'annexe~\ref{ann:JFPC} présente l'étude du cas discret du problème
+  (article publié aux Journées Francophones de la Programmation par
+  Contraintes~\cite{Nattaf_JFPC}). L'annexe~\ref{ann:IESM} porte sur
+  la mise en place d'une matheuristique pour un problème industriel
+  d'ordonnancement avec contraintes et objectifs énergétiques. Ce
+  travail s'inscrit dans le cadre d'une collaboration pour un projet
+  franco-chilien et a été publié dans la conférence IESM (International
+  Conference on Industrial Engineering and Systems Management).
 \end{itemize}
 
 
