--- a/part2/PPC.tex
+++ b/part2/PPC.tex
@@ -70,5 +70,9 @@
 
 
 \input{part2/CuSP/PPC_CuSP.tex}
+%
+\clearemptydoublepage%
 \input{part2/CECSP/PPC_CECSP.tex}
+%
+\clearemptydoublepage%
 \input{part2/conclusion.tex}
