--- a/part2/conclusion.tex
+++ b/part2/conclusion.tex
@@ -1,5 +1,4 @@
-\chapter*{Conclusion}
-
+\chapter*{Conclusion\markboth{CONCLUSION}{}}
 Dans cette partie présentant des méthodes issues de la programmation
 par contraintes, nous avons commencé par brièvement rappeler les
 principales notions sur lesquelles reposent ce paradigme. De plus, une
